# mysql-binlog-connector-rust

./: .gitignore  Cargo.toml  README.md  README_ZH.md
example/: Cargo.toml
example/src/: .env  main.rs
src/: binlog_client.rs  binlog_error.rs  binlog_parser.rs  binlog_stream.rs  constants.rs  lib.rs
src/column/: column_type.rs  column_value.rs  mod.rs
src/column/json/: json_binary.rs  json_formatter.rs  json_string_formatter.rs  mod.rs  value_type.rs
src/command/: auth_native_password_command.rs  auth_plugin.rs  auth_sha2_password_command.rs  auth_sha2_rsa_password_command.rs  authenticate_command.rs  authenticator.rs  command_type.rs  command_util.rs  dump_binlog_command.rs  dump_binlog_gtid_command.rs  gtid_set.rs  mod.rs  query_command.rs  ssl_request_command.rs
src/event/: checksum_type.rs  delete_rows_event.rs  event_data.rs  event_header.rs  event_type.rs  format_description_event.rs  gtid_event.rs  mod.rs  previous_gtids_event.rs  query_event.rs  rotate_event.rs  row_event.rs  rows_query_event.rs  table_map_event.rs  transaction_payload_event.rs  update_rows_event.rs  write_rows_event.rs  xa_prepare_event.rs  xid_event.rs
src/event/table_map/: default_charset.rs  mod.rs  (+2 more)
src/ext/: buf_ext.rs  cursor_ext.rs  mod.rs
src/network/: auth_plugin_switch_packet.rs  error_packet.rs  greeting_packet.rs  mod.rs  packet_channel.rs  result_set_row_packet.rs
src/test/: .env  assert.rs  ddl_tests.rs  mod.rs  test_common.rs  test_runner.rs
tests/: .env  assert.rs  integration_test.rs  test_runner.rs
tests/data_type_tests/: binary_tests.rs  bit_tests.rs  blob_tests.rs  bytes_test_util.rs  char_tests.rs  charset_tests.rs  date_tests.rs  date_time_tests.rs  decimal_tests.rs  enum_set_tests.rs  enum_tests.rs  json_tests.rs  mod.rs  numeric_decimal_tests.rs  numeric_tests.rs  set_tests.rs  string_charset_tests.rs  string_tests.rs  text_tests.rs  time_tests.rs  timestamp_tests.rs  year_tests.rs
tests/ddl_tests/: ddl_tests.rs  mod.rs
tests/dml_tests/: delete_tests.rs  dml_test_common.rs  insert_tests.rs  mod.rs  update_tests.rs
tests/parse_file_tests/: mysql-bin.000080  non-binlog  parse_file_tests.rs
tests/runner/: assert.rs  env.rs  mock.rs  mod.rs  test_runner.rs
(+15 files in other folders)
