[package]
edition = "2021"
name = "mysql-binlog-connector-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num_enum = "0.5.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.87"
serial_test = "0.10.0"
sha-1 = "0.10.0"
zstd = "0.12.0+zstd.1.5.2"
async-std = "1.12.0"
dotenv = "0.15.0"
url = "2.3.1"