[workspace]
members = [
    ".",
    "./example",
]

[package]
edition = "2021"
name = "mysql-binlog-connector-rust"
version = "0.2.1"
authors = ["Shicai Xu <chenglingsu@126.com>"]
categories = ["database"]
description = "mysql binlog connector"
documentation = "https://docs.rs/mysql-binlog-connector-rust"
keywords = ["mysql", "binlog", "connector"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/apecloud/mysql-binlog-connector-rust"
homepage = "https://github.com/apecloud/mysql-binlog-connector-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num_enum = "0.7.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.87"
serial_test = "3.1.1"
sha1 = "0.10.0"
sha2 = "0.10.6"
zstd = "0.13.2"
async-std = "1.12.0"
dotenv = "0.15.0"
url = "2.3.1"
async-recursion = "1.0.2"
lazy_static = "1.4.0"
thiserror = "1.0.44"
mysql_common = "0.32.4"
base64 = "0.22.1"
